# my-trading-platform

./: .gitignore  README.md  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: assets.py  config.py  db.py  jobs.py  main.py  models.py  timeutil.py
backend/app/api/: accounts.py  auth.py  deps.py  journal.py  market.py  orders.py  replay.py  schemas.py  strategies.py
backend/app/engine/: alpaca_live_adapter.py  calendar.py  crypto_calendar.py  engine.py  options_expiry.py  options_sim_adapter.py  sim_adapter.py  valuation.py
backend/app/marketdata/: alpaca.py  alpaca_options.py  base.py  binance.py  coinbase.py  (+2 more)
backend/strategies/: sma_cross.py
backend/tests/: conftest.py  factories.py  fakes.py  live_fixtures.py  test_api_accounts_orders.py  test_api_auth.py  test_api_crypto.py  test_api_live.py  test_api_market_journal_strategies.py  test_api_options.py  test_api_replay.py  test_assets.py  test_calendar.py  test_crypto_calendar.py  test_crypto_providers.py  test_db.py  test_deps_routing.py  test_engine_clock.py  test_engine_fills.py  test_engine_options.py  test_engine_placement.py  test_jobs.py  test_live_adapter.py  test_live_migration.py  test_live_startup.py  test_marketdata_service.py  test_models.py  test_option_types.py  test_options_expiry.py  test_options_provider.py  test_options_sim.py  test_providers.py  test_replay_isolation.py  test_replay_market_data.py  test_replay_models.py  test_replay_service.py  test_replay_stepper.py  test_replay_strategies.py  test_replay_valuation.py  test_sim_limit_expiry.py  (+3 more)
(+86 files in other folders)
