[project]
name = "paper-trading-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10,<4",
    "exchange-calendars>=4.5",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "itsdangerous>=2.2",
]

[dependency-groups]
dev = ["pytest>=8.2"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
